refactored script.js

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     <div class="title">Etch-A-Sketch</div>
-    <div class="canvas">
-
+    <div class="body">
+        <div class="settings">
+            <input type="color" name="brushColor" id="brushColor">
+            <input type="range" id="gridSize" min="4" max="100" step="1">
+        </div>
+        <div class="canvas">
+        </div>
     </div>
-    <input type="range" name="gridDimension" id="gridDimension" min="4" max="60" step="1">
-    <script src="javascript.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
